# surveil

./: .dockerignore  .gitignore  .gitreview  .testr.conf  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  docker-compose-common.yml  docker-compose-production.yml  docker-compose.yml  docs-requirements.txt  draft_test  fig.yml  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  surveil_architecture.odg  test-requirements.txt  tmp.json  tox.ini
container-data/: README.rst
contrib/: Vagrantfile
contrib/systemd/: surveil-api.service  surveil-os-interface.service
contrib/vagrant-surveil-devstack/: Vagrantfile  devstack.sh
doc/source/: conf.py  getting_started.rst  index.rst  project_architecture.rst  shinken-plugins  shinken_plugins.rst  shinken_tools
doc/source/administration/: index.rst  surveil-os-interface.rst  surveil-webui.rst  surveil_api.rst
doc/source/examples/: autoscaling.yaml
doc/source/tutorials/: create_custom_plugin.rst  developing_the_api.rst  getting_started.rst  heat_autoscaling.rst  index.rst  installing_surveil.rst  running_the_tests.rst  (+2 more)
etc/surveil/: api_paste.ini  config.cfg  config.py  policy.json  surveil.cfg  surveil_os_interface.cfg  surveil_rabbitMQ_consumer.cfg  surveil_rabbitMQ_consummer.cfg
plugins/: check_glance  check_keystone  requirements.txt
surveil/: policy.py
surveil/api/: api.py  app.py  config.py  hooks.py  rbac.py
surveil/cmd/: api.py  cli.py  config.py  init.py  os_discovery.py  pack_upload.py  rabbitMQ_consumer.py  rabbitMQ_receiver.py  surveil_from_nagios.py  surveil_os_interface.py
surveil/common/: policy.py  util.py
surveil/tests/: base.py
tools/test_env/: Dockerfile
(+352 files in other folders)
