[metadata]
name = surveil
version = 2014.1.0
summary = Monitoring as a Service for OpenStack
description-file =
    README.rst

[files]
packages =
    surveil

[entry_points]
console_scripts =
    surveil-api = surveil.cmd.api:main
    surveil-init = surveil.cmd.init:main
    surveil-pack-upload = surveil.cmd.pack_upload:main
    surveil-os-discovery = surveil.cmd.os_discovery:main
    surveil-rabbitMQ-consumer = surveil.cmd.rabbitMQ_consumer:main

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
