[metadata]
name = surveil
version = 2014.1.0
summary = Monitoring as a Service for OpenStack
description-file =
    README.rst

[files]
packages =
    surveil
data_files =
    etc =  etc/*
    etc/surveil = surveil/api/config.py

[entry_points]
console_scripts =
    surveil-api = surveil.cmd.api:SurveilCommandRunner.handle_command_line
    surveil-init = surveil.cmd.init:main
    surveil-pack-upload = surveil.cmd.pack_upload:main
    surveil-os-discovery = surveil.cmd.os_discovery:main
    surveil-os-interface = surveil.cmd.surveil_os_interface:main
    surveil-from-nagios = surveil.cmd.surveil_from_nagios:main

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
